# PTQ-Quaternionic-RC

./: .gitignore  Makefile  README.md  exec.txt  pyproject.toml  requirements.txt
.cache/matplotlib/: fontlist-v390.json
dataset/: sparc_miniset.csv  sparc_tidy.csv
dataset/geometry/: aliases.csv  h_catalog.csv.sha256  h_z_outliers.csv  s4g_tablea1.tsv  s4g_tablea1.tsv.sha256  sparc_with_h.csv  sparc_with_h.csv.sha256  unmatched_galaxies.csv
dataset/raw/: vizier_table1.csv  vizier_table2.csv
docs/: REVISION_PLAN.md
results/baryon_gauss/: per_galaxy_summary.csv
results/closure_scan/: closure_sensitivity.csv  closure_sensitivity.yaml  manifest.yaml
results/closure_scan_ol/: closure_sensitivity.csv  closure_sensitivity.yaml  manifest.yaml
results/mond_gauss/: per_galaxy_summary.csv
results/nfw1p_gauss/: per_galaxy_summary.csv
results/paper_artifacts/: paper_results_summary.md  pwaic_top_galaxies_table.tex  waic_compare_table.tex
results/paper_submission_ptqnu_20260323/: git_commit.txt  (+1 more)
scripts/: assemble_h_catalog.py  download_s4g_tables.py  etl_s4g_h.py  fix_and_check_loo.sh  make_extra_figs.py  make_paper_artifacts.py  prepare_sparc_subset.py  run_baseline_sixmodels_12000.sh  run_core_equal12000_fresh.sh  run_core_equal12000_fresh_tail.sh  run_exp.sh  run_kappa_sigma_sweeps.sh  run_ptqnu_submission_bundle.sh  run_ptqscreen_resume12000.sh  run_revision_prod_core.sh  run_robustness.sh  run_robustness_core_multiseed12000.sh  run_sparc90.sh  suggest_aliases.py  summarize_baseline_sixmodels.py  summarize_kappa_sigma_reports.py  summarize_robustness_core_multiseed.py  vizier_s4g_query.sh
tests/: test_covariance.py  test_make_paper_artifacts.py  test_models.py  test_s4g_h_pipeline.py
(+290 files in other folders)
