[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptquat-rc"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "emcee>=3.1",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "astropy>=6.0",
  "astroquery>=0.4.7"
]

[project.scripts]
ptquat = "ptquat.cli:main"

